@@ -160,15 +160,3 @@ def explode_tokens(tokenlist):
             result.append((token, c))
 
     return _ExplodedList(result)
-
-
-def find_all_controls(layout):
-    """
-    Find all the `UIControl` objects in this layout.
-    """
-    from .containers import Container, Window
-    assert isinstance(layout, Container)
-
-    for item in layout.walk():
-        if isinstance(item, Window):
-            yield item.content
