@@ -50,8 +50,16 @@ Migrating readline applications:
 
 
 TODO: finish changelog...
+- Removed AcceptAction, AbortAction
+buffer.initial_document was renamed to buffer.document
 
 
+TODO: clean up 'contrib'.
+      clean up filters. Use @Condition as much as possible.
+    rename pop_focus()
+    Focus() should be an attribute of the Layout() class.
+rename current_buffer to focussed_buffer
+allow setting of focussed_buffer.  (Search in the UI.)
 
 
 1.0.9: 2016-11-07
